# MaaFramework

./: .clang-format  .cursorignore  .editorconfig  .gitattributes  .gitignore  .gitmodules  AGENTS.md  AdbControlUnitAPI_8h.html  AdbControlUnitAPI_8h.js  AdbControlUnitAPI_8h_source.html  AndroidNativeControlUnitAPI_8h.html  AndroidNativeControlUnitAPI_8h.js  AndroidNativeControlUnitAPI_8h_source.html  CMakeLists.txt  CMakePresets.json  CNAME  Config.cmake.in  ControlUnitAPI_8h.html  ControlUnitAPI_8h.js  ControlUnitAPI_8h_source.html  CustomControlUnitAPI_8h.html  CustomControlUnitAPI_8h.js  CustomControlUnitAPI_8h_source.html  DbgControlUnitAPI_8h.html  DbgControlUnitAPI_8h.js  DbgControlUnitAPI_8h_source.html  Doxyfile  GamepadControlUnitAPI_8h.html  GamepadControlUnitAPI_8h.js  GamepadControlUnitAPI_8h_source.html  KWinControlUnitAPI_8h.html  KWinControlUnitAPI_8h.js  KWinControlUnitAPI_8h_source.html  MAA.sln  MaaAPI_8h.html  MaaAPI_8h_source.html  MaaAgentClientAPI_8h.html  MaaAgentClientAPI_8h.js  MaaAgentClientAPI_8h_source.html  MaaAgentClientDef_8h.html  (+286 more)
cli/: CMakeLists.txt  main.cpp
cli/Core/: Type.h
cli/UI/: Menu.cpp  Menu.h
cli/Utils/: Misc.cpp  Misc.h
cmake/post_install/: CMakeLists.txt
plugins/demo/: CMakeLists.txt  main.cpp
sample/cpp/: CMakeLists.txt  MaaSample.vcxproj  MaaSample.vcxproj.filters  conf.h  maapp.cpp  maapp_module.cpp  main.cpp  main_c++20.cpp  main_cpp.cpp  main_maapp_coro.cpp
source/: CMakeLists.txt  Directory.Build.props  Directory.Build.targets  MaaAPI.cpp  MaaFramework.vcxproj  MaaFramework.vcxproj.filters
source/API/: MaaAPI.cpp
source/AgentCommon/: Transceiver.cpp
source/Base/: AsyncCallback.hpp  AsyncRunner.hpp  MessageNotifier.hpp  NonCopyable.hpp  SingletonHolder.hpp
source/Common/: MaaBuffer.cpp  MaaConf.h  MaaContext.cpp  MaaController.cpp  MaaMsg.h  MaaOptions.h  MaaResource.cpp  MaaTasker.cpp  MaaTypes.h  MaaUtility.cpp
source/Controller/: AdbController.cpp  AdbController.h  ControllerMgr.cpp  ControllerMgr.h  CustomController.cpp  CustomController.h  CustomThriftController.cpp  CustomThriftController.h  MaatouchController.cpp  MaatouchController.h  MacPlayToolsController.cpp  MacPlayToolsController.h  MinitouchController.cpp  MinitouchController.h  PlayToolsController.cpp  PlayToolsController.h
source/Instance/: InstanceInternalAPI.hpp  InstanceMgr.cpp  InstanceMgr.h  InstanceStatus.cpp  InstanceStatus.h  MaaInstance.cpp  MaaInstance.h
source/LibraryHolder/: CMakeLists.txt
source/MAAFramework/: CMakeLists.txt  MaaFramework.vcxproj
source/MaaAdbControlUnit/: CMakeLists.txt  ControlUnitMgr.cpp  ControlUnitMgr.h  MaaAdbControlUnit.vcxproj  UnitBase.cpp  UnitBase.h
source/MaaAgentClient/: CMakeLists.txt
source/MaaAgentServer/: CMakeLists.txt
source/MaaAndroidControlUnit/: CMakeLists.txt
source/MaaAndroidNativeControlUnit/: CMakeLists.txt  README.md
source/MaaControlUnit/: CMakeLists.txt  ControlUnitMgr.cpp  ControlUnitMgr.h  MaaControlUnit.vcxproj  UnitBase.cpp  UnitBase.h
source/MaaCustomControlUnit/: CMakeLists.txt
source/MaaDbgControlUnit/: CMakeLists.txt  DbgController.cpp  DbgController.h
source/MaaDebuggingControlUnit/: CMakeLists.txt  ControlUnitMgr.cpp  ControlUnitMgr.h  MaaDebuggingControlUnit.vcxproj
source/MaaFramework/: CMakeLists.txt  MaaFramework.vcxproj
source/MaaGamepadControlUnit/: CMakeLists.txt
source/MaaGamescopeControlUnit/: CMakeLists.txt
source/MaaHttp/: .gitignore  CMakeLists.txt  base64.hpp  config.json  dump-include.sh  extra.cpp  extra.h  include.h  info.hpp  interface.json  main.cpp  specialize.hpp  update-macos.sh  update-win.bat  wrapper.cpp
source/MaaKWinControlUnit/: CMakeLists.txt  test_kwin_keyboard.cpp  test_kwin_screencap.cpp
source/MaaLinuxControlUnit/: CMakeLists.txt
source/MaaMacControlUnit/: CMakeLists.txt
source/MaaMacOSControlUnit/: CMakeLists.txt
source/MaaPI/: CMakeLists.txt
source/MaaPiCli/: CMakeLists.txt  README.md
source/MaaPlayCoverControlUnit/: CMakeLists.txt
source/MaaProjectInterface/: CMakeLists.txt
source/MaaProjectInterfaceCli/: CMakeLists.txt  configurator.cpp  configurator.h  interactor.cpp  interactor.h  main.cpp  runner.cpp  runner.h
source/MaaProjectInterfaceNext/: CMakeLists.txt  main.cpp
source/MaaProxyControlUnit/: CMakeLists.txt  ProxyController.cpp  ProxyController.h
source/MaaRecordControlUnit/: CMakeLists.txt  RecordController.cpp  RecordController.h
source/MaaReplayControlUnit/: CMakeLists.txt
source/MaaRpc/: CMakeLists.txt  Framework.proto  Types.proto
source/MaaThriftControlUnit/: CMakeLists.txt
source/MaaThriftController/: CMakeLists.txt  MaaThriftController.vcxproj
source/MaaToolKit/: CMakeLists.txt  MaaToolKit.vcxproj
source/MaaToolkit/: CMakeLists.txt
source/MaaUtils/: CMakeLists.txt  Logger.cpp  MaaUtils.vcxproj  MaaUtils.vcxproj.filters
source/MaaWin32ControlUnit/: CMakeLists.txt
source/MaaWin32GetCursorPosHook/: CMakeLists.txt  GetCursorPosHookDll.cpp
source/MaaWlRootsControlUnit/: CMakeLists.txt
source/Option/: GlobalOption.cpp  GlobalOption.h  GlobalOptionMgr.cpp  GlobalOptionMgr.h
source/ProjectInterface/: CMakeLists.txt  Configurator.cpp
source/Resource/: AbstractResource.h  AdbConfig.cpp  AdbConfig.h  OCRConfig.cpp  OCRConfig.h  PipelineConfig.cpp  PipelineConfig.h  PipelineTypes.h  ResourceMgr.cpp  ResourceMgr.h  TemplateConfig.cpp  TemplateConfig.h
source/Task/: AbstractTask.h  CustomAction.cpp  CustomAction.h  CustomTask.cpp  CustomTask.h  PipelineTask.cpp  PipelineTask.h  PipelineTypes.h  TaskBase.cpp  TaskBase.h
source/Utils/: ArgV.hpp  ArgvWrapper.hpp  AsyncRunner.cpp  AsyncRunner.hpp  Demangle.hpp  File.hpp  Format.hpp  ImageIo.hpp  Locale.hpp  (+10 more)
tools/: CMakeLists.txt  analyze_log.py  collect-mac-debug.sh  custom.action.schema.json  custom.recognition.schema.json  debug_tracker.js  fetch-fmt.sh  fix_mac_rpath.sh  interface.schema.json  interface_config.schema.json  interface_import.schema.json  interface_v2.schema.json  maadeps-download.py  maadeps-extract.py  mac_post_install.sh  migrate_pipeline_v5.py  pipeline.schema.json  split-linux-debug.sh
(+2014 files in other folders)
