add_executable(sample main.cpp)
target_link_libraries(sample MaaFramework MaaToolkit)

add_executable(sample_maapp_coro maapp.cpp)
target_link_libraries(sample_maapp_coro MaaPP MaaFramework MaaToolkit HeaderOnlyLibraries)

set(CMAKE_CXX_SCAN_FOR_MODULES ON)

add_executable(sample_maapp_coro_module maapp_module.cpp)
target_link_libraries(sample_maapp_coro_module MaaPPModule MaaFramework MaaToolkit HeaderOnlyLibraries)
